Fix wrapping bug for long URLs
Since I make anchors inline-blocks, I need to constrain them to their
containing blocks with max-width: 100% (width: 100% would make all the
blank space to the right clickable).

--- a/list/style.css
+++ b/list/style.css
@@ -23,6 +23,7 @@ h1 {
 
 a, a:active, a:focus, a:hover, .expired {
     display: inline-block;
+    max-width: 100%;
     margin-left: 1em;
     text-indent: -1em;
     word-wrap: break-word;
